--- a/Finance_Stock_Crypto_Trading/Bitcoin Price Prediction with FB Prophet.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin Price Prediction with FB Prophet.ipynb
@@ -802,7 +802,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Forecast by splitting the data into train and test"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Forecast by splitting the data into train and test </h3>\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
