--- a/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -1022,7 +1022,7 @@
    "metadata": {},
    "source": [
     "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
-    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Mix Max Scaling of Data post Train-Test Split </h3>\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Min Max Scaling of Data post Train-Test Split </h3>\n",
     "</div>\n",
     "\n",
     "\n",
@@ -1277,9 +1277,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-------------------------------\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> For LSTM Reshape input ( trainX and testX ) to be 3-D of [samples, time steps, features] </h3>\n",
+    "</div>\n",
     "\n",
-    "# For LSTM Reshape input ( trainX and testX ) to be 3-D of [samples, time steps, features]\n",
+    "\n",
     "\n",
     "### First check the current shape of trainX and testX"
    ]
@@ -1756,7 +1758,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LSTM (Long Short-Term Memory) Mechanism\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> LSTM (Long Short-Term Memory) Mechanism </h3>\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "\n",
     "The Long Short-Term Memory, or LSTM, is a recurrent neural network that is comprised of internal gates.\n",
     "\n",
@@ -1806,7 +1812,10 @@
     "\n",
     "Stacked LSTMs are now a stable technique for challenging sequence prediction problems. \n",
     "\n",
-    "# Final LSTM "
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Final LSTM </h3>\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
@@ -2181,7 +2190,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LSTM Predictions using testX and plotting line graph against Actual testY\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> LSTM Predictions using testX and plotting line graph against Actual testY </h3>\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "Due to scaling step done earlier with MinMaxScaler the predicted scale is between 0 and 1. \n",
     "Now, I need to transfer this scale to the original data scale (real value). for example:[0.58439621 0.58439621 0.58439621 ... 0.81262134 0.81262134 0.81262134], the pred answer transfer to :[250 100 50 60 .....]\n",
@@ -2236,7 +2250,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LSTM Prediction using trainX and plotting line graph against Actual trainY"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> LSTM Prediction using trainX and plotting line graph against Actual trainY </h3>\n",
+    "</div>"
    ]
   },
   {
@@ -2344,7 +2360,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now Future Price Predictions - For 5 Days beyond the actual trading days for which I dont have the ground truth data (i.e. for 5-days into future for which I dont have actual Trading Price yet)\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Now Future Price Predictions - For 5 Days beyond the actual trading days for which I dont have the ground truth data (i.e. for 5-days into future for which I dont have actual Trading Price yet) </h3>\n",
+    "</div>\n",
     "\n",
     "Note that the original Trading data (the .csv file used at the very top of this notebook) ended on 30-Oct-2021, but now I am going to forecast the Bitcoin Prices for 5 days beyond 30-Oct-2021, using the trained LSTM model above.\n",
     "\n",
@@ -2716,7 +2734,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finally Plot entire Predictions of Test Data (including the Future 5-days ) against Actual testY"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Now Future Price Predictions - For 5 Days beyond the actual trading days for which I dont have the ground truth data (i.e. for 5-days into future for which I dont have actual Trading Price yet) </h3>\n",
+    "</div>\n",
+    "\n"
    ]
   },
   {
