--- a/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_with_LSTM.ipynb
+++ b/Finance_Stock_Crypto_Trading/Bitcoin_Price_Prediction_with_LSTM.ipynb
@@ -2735,9 +2735,8 @@
    "metadata": {},
    "source": [
     "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
-    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Now Future Price Predictions - For 5 Days beyond the actual trading days for which I dont have the ground truth data (i.e. for 5-days into future for which I dont have actual Trading Price yet) </h3>\n",
-    "</div>\n",
-    "\n"
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Finally Plot entire Predictions of Test Data (including the Future 5-days ) against Actual testY </h3>\n",
+    "</div>"
    ]
   },
   {
@@ -2773,7 +2772,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bonus - Further work to improving overall result from the above LSTM\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h3 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Bonus - Further work to improving overall result from the above LSTM </h3>\n",
+    "</div>\n",
     "\n",
     "\n",
     "* According to this [Study](https://d-nb.info/1185667245/34) - they got best results by utilizing as inputs different cryptocurrency data ( BTC, ETH and Ripple (XRP)) and handles them independently in order to exploit useful information from each cryptocurrency separately.\n",
