--- a/Aerial-Drone-Images-Semantic-Segmentation-PyTorch-Inception-V4-Pretrained/Inceptionv4_Pretrained_Torch.ipynb
+++ b/Aerial-Drone-Images-Semantic-Segmentation-PyTorch-Inception-V4-Pretrained/Inceptionv4_Pretrained_Torch.ipynb
@@ -1,10 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inceptionv4 (Pretrained) with PyTorch on Drone Dataset\n",
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h1 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Inceptionv4 (Pretrained) with PyTorch on Drone Dataset  </h1>\n",
+    "</div>\n",
+    "\n",
+    "\n",
     "\n",
     "[Dataset Link](https://www.kaggle.com/datasets/bulentsiyah/semantic-drone-dataset)\n",
     "\n",
@@ -1353,10 +1358,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Execute Training"
+    "<div style=\"background: linear-gradient(45deg, #FFC300, #FF5733, #C70039, #900C3F); padding: 10px; border-radius: 5px; display: flex; align-items: center;\">\n",
+    "    <h1 style=\"font-weight: bold; color: white; margin: 0 auto;\"> Training  </h1>\n",
+    "</div>"
    ]
   },
   {
