--- a/Computer_Vision/Dice_Coeffiecient_from_Scratch/Dice_Coeff.ipynb
+++ b/Computer_Vision/Dice_Coeffiecient_from_Scratch/Dice_Coeff.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -31,6 +32,33 @@
    "outputs": [],
    "source": [
     "def dice_coefficient(y_true, y_pred, smooth=1):\n",
+    "    \"\"\"\n",
+    "    Computes the Dice coefficient, a statistical metric used for comparing the similarity \n",
+    "    of two samples. It is especially used for comparing the pixel-wise agreement between a \n",
+    "    predicted segmentation and its corresponding ground truth.\n",
+    "\n",
+    "    The Dice coefficient is defined as 2 * |X ∩ Y| / (|X|+|Y|), where X is the true mask \n",
+    "    of an image and Y is the predicted mask. In other words, it's twice the area of overlap \n",
+    "    between the predicted and ground truth, divided by the total number of pixels in both \n",
+    "    images. \n",
+    "\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    y_true : array\n",
+    "        The ground truth masks.\n",
+    "    \n",
+    "    y_pred : array\n",
+    "        The predicted masks.\n",
+    "\n",
+    "    smooth : float, optional (default is 1)\n",
+    "        A smoothing factor to prevent division by zero in case there's no overlap between \n",
+    "        the predicted and ground truth masks.\n",
+    "\n",
+    "    Returns:\n",
+    "    --------\n",
+    "    float\n",
+    "        The Dice coefficient, a float between 0 (complete dissimilarity) and 1 (complete similarity).\n",
+    "    \"\"\"\n",
     "    intersection = K.sum(y_true * y_pred, axis=[1, 2, 3])\n",
     "    union = K.sum(y_true, axis=[1, 2, 3]) + K.sum(y_pred, axis=[1, 2, 3])\n",
     "    return K.mean((2. * intersection + smooth) / (union + smooth), axis=0)"
