--- a/Computer_Vision/FMNIST_Deep_Neural_Netork_Base_Pytorch_Model/Deep-Neural-Network-with-PyTorch-FMNIST-Dataset-PART-2.ipynb
+++ b/Computer_Vision/FMNIST_Deep_Neural_Netork_Base_Pytorch_Model/Deep-Neural-Network-with-PyTorch-FMNIST-Dataset-PART-2.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -71,6 +72,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -147,6 +149,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -211,6 +214,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -259,6 +263,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -346,6 +351,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": []
@@ -438,6 +444,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -489,6 +496,24 @@
    "outputs": [],
    "source": [
     "def run_model():\n",
+    "  \"\"\"\n",
+    "    This function defines a simple neural network model, the loss function, and the optimizer.\n",
+    "    The neural network consists of an input layer, a hidden layer with batch normalization and\n",
+    "    ReLU activation, and an output layer. It uses Cross-Entropy as the loss function and Stochastic \n",
+    "    Gradient Descent as the optimizer.\n",
+    "\n",
+    "    Returns:\n",
+    "    --------\n",
+    "    model : nn.Module\n",
+    "        The defined neural network model.\n",
+    "    \n",
+    "    loss_fn : nn.CrossEntropyLoss\n",
+    "        The loss function used for training the model.\n",
+    "    \n",
+    "    optimizer : torch.optim.SGD\n",
+    "        The optimizer used for training the model.\n",
+    "    \"\"\"  \n",
+    "  # Define the neural network architecture  \n",
     "  class neuralnetwork(nn.Module):\n",
     "    def __init__(self):\n",
     "      super().__init__()\n",
@@ -518,6 +543,7 @@
    "outputs": [],
    "source": [
     "@torch.no_grad()\n",
+    "\n",
     "def test_loss(x, y, model):\n",
     "  prediction = model(x)[0]\n",
     "  test_loss = loss_fn(prediction, y)\n",
@@ -566,6 +592,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -764,6 +791,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
