--- a/Computer_Vision/Pixel_Accuracy/Pixel_Accuracy.ipynb
+++ b/Computer_Vision/Pixel_Accuracy/Pixel_Accuracy.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,7 +21,35 @@
     "import torch.nn.functional as F\n",
     "\n",
     "def pixel_accuracy(output, gt):\n",
+    "    \"\"\"\n",
+    "    Computes the pixel-wise accuracy of the predictions.\n",
+    "\n",
+    "    This function takes as input the model's raw output and the ground truth, applies a softmax \n",
+    "    operation to the output, selects the class with the highest probability as the predicted class \n",
+    "    for each pixel, and then compares the predictions with the ground truth to compute the accuracy.\n",
+    "\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    output : torch.Tensor\n",
+    "        The raw output from the model. It has shape (N, C, H, W) where N is the batch size, C is the \n",
+    "        number of classes, and H and W are the height and width of the images, respectively.\n",
+    "    \n",
+    "    gt : torch.Tensor\n",
+    "        The ground truth labels for the images. It has shape (N, H, W).\n",
+    "\n",
+    "    Returns:\n",
+    "    --------\n",
+    "    float\n",
+    "        The pixel-wise accuracy of the predictions.\n",
+    "\n",
+    "    Note:\n",
+    "    -----\n",
+    "    The accuracy is computed within a torch.no_grad() context to disable gradient computation, as this \n",
+    "    function is typically used for evaluating the model, not for training.\n",
+    "    \"\"\"\n",
     "    with torch.no_grad():\n",
+    "        # Apply softmax to the output to get the predicted probabilities for each class\n",
+    "        # Then, select the class with the highest probability as the predicted class for each pixel\n",
     "        output = torch.argmax(F.softmax(output, dim=1), dim=1)\n",
     "        correct = torch.eq(output, gt).int()\n",
     "        accuracy = float(correct.sum()) / float(correct.numel())\n",
@@ -28,6 +57,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -35,6 +65,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
