--- a/Computer_Vision/Pixel_Accuracy/Pixel_Accuracy.ipynb
+++ b/Computer_Vision/Pixel_Accuracy/Pixel_Accuracy.ipynb
@@ -52,6 +52,7 @@
     "        # Then, select the class with the highest probability as the predicted class for each pixel\n",
     "        output = torch.argmax(F.softmax(output, dim=1), dim=1)\n",
     "        correct = torch.eq(output, gt).int()\n",
+    "        # Compute the accuracy as the number of correctly predicted pixels divided by the total number of pixels\n",
     "        accuracy = float(correct.sum()) / float(correct.numel())\n",
     "    return accuracy"
    ]
