--- a/Computer_Vision/WGAN_WITHOUT_Gradient_Penalty_from_Scratch_PyTorch/WGAN_Pytorch_From_Scratch_Full_Notebook.ipynb
+++ b/Computer_Vision/WGAN_WITHOUT_Gradient_Penalty_from_Scratch_PyTorch/WGAN_Pytorch_From_Scratch_Full_Notebook.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -182,6 +183,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "7A1WwPqxmfrE"
@@ -297,6 +299,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -360,6 +363,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "yQ954M71otK9"
@@ -407,6 +411,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "xIXAbyxIo9r9"
@@ -441,10 +446,32 @@
       "outputs": [],
       "source": [
         "class Generator(nn.Module):\n",
+        "    \"\"\" Generator module for a Wasserstein GAN (WGAN).\n",
+        "\n",
+        "    Parameters:\n",
+        "    - img_shape (tuple): Shape of the output images (e.g., (channels, height, width)).\n",
+        "    - latent_dim (int): Dimensionality of the latent space.\n",
+        "\n",
+        "    Forward Args:\n",
+        "    - z (torch.Tensor): Input tensor of shape (batch_size, latent_dim).\n",
+        "\n",
+        "    Forward Returns:\n",
+        "    - img (torch.Tensor): Generated output images of shape (batch_size, *img_shape). \"\"\"\n",
         "    def __init__(self, img_shape, latent_dim):\n",
         "        super(Generator, self).__init__()\n",
         "\n",
         "        def block(in_features, out_features, normalize=True):\n",
+        "            \"\"\"\n",
+        "            Helper function to create a generator block.\n",
+        "\n",
+        "            Parameters:\n",
+        "            - in_features (int): Number of input features.\n",
+        "            - out_features (int): Number of output features.\n",
+        "            - normalize (bool): Whether to apply batch normalization.\n",
+        "\n",
+        "            Returns:\n",
+        "            - layers (list): List of layers for the generator block.\n",
+        "            \"\"\"\n",
         "            layers = [nn.Linear(in_features, out_features)]\n",
         "            if normalize:\n",
         "                layers.append(nn.BatchNorm1d(out_features, 0.8))\n",
@@ -471,12 +498,22 @@
         "        )\n",
         "\n",
         "    def forward(self, img_shape, z):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the generator.\n",
+        "\n",
+        "        Parameters:\n",
+        "        - z (torch.Tensor): Input tensor of shape (batch_size, latent_dim).\n",
+        "\n",
+        "        Returns:\n",
+        "        - img (torch.Tensor): Generated output images of shape (batch_size, *img_shape).\n",
+        "        \"\"\"\n",
         "        img = self.model(z)\n",
         "        img = img.view(img.shape[0], *img_shape)\n",
         "        return img"
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "P01xoE6FpL9-"
@@ -523,6 +560,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "0y-0F1URpfQd"
@@ -578,6 +616,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Y0X-PJWYp6W9"
@@ -604,6 +643,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "Bf3lQ1-0qehW"
