--- a/Computer_Vision/WGAN_WITHOUT_Gradient_Penalty_from_Scratch_PyTorch/WGAN_Pytorch_From_Scratch_Full_Notebook.ipynb
+++ b/Computer_Vision/WGAN_WITHOUT_Gradient_Penalty_from_Scratch_PyTorch/WGAN_Pytorch_From_Scratch_Full_Notebook.ipynb
@@ -536,6 +536,18 @@
       "outputs": [],
       "source": [
         "class Critic(nn.Module):\n",
+        "    \"\"\"\n",
+        "    Critic module for a Wasserstein GAN (WGAN).\n",
+        "\n",
+        "    Parameters:\n",
+        "    - img_shape (tuple): Shape of the input images (e.g., (channels, height, width)).\n",
+        "\n",
+        "    Forward Args:\n",
+        "    - img (torch.Tensor): Input tensor of shape (batch_size, *img_shape).\n",
+        "\n",
+        "    Forward Returns:\n",
+        "    - validity (torch.Tensor): Output tensor indicating the critic's assessment of the input images.\n",
+        "    \"\"\"\n",
         "    def __init__(self, img_shape):\n",
         "        super(Critic, self).__init__()\n",
         "\n",
@@ -554,6 +566,15 @@
         "        )\n",
         "\n",
         "    def forward(self, img):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the critic.\n",
+        "\n",
+        "        Parameters:\n",
+        "        - img (torch.Tensor): Input tensor of shape (batch_size, *img_shape).\n",
+        "\n",
+        "        Returns:\n",
+        "        - validity (torch.Tensor): Output tensor indicating the critic's assessment of the input images.\n",
+        "        \"\"\"\n",
         "        img_flat = img.view(img.shape[0], -1)\n",
         "        validity = self.model(img_flat)\n",
         "        return validity"
