--- a/Computer_Vision/Why_We_Scale_images_for_Neural_Network/Why_We_Scale_images_for_Neural_Network.ipynb
+++ b/Computer_Vision/Why_We_Scale_images_for_Neural_Network/Why_We_Scale_images_for_Neural_Network.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -109,6 +110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,8 +124,19 @@
    "outputs": [],
    "source": [
     "class DatasetTransformer(Dataset):\n",
-    "  \"\"\" Will take 2 arrays/tensors for parameters train_images (x) and train_img_targets (y) \"\"\"\n",
+    "  \"\"\" \n",
+    "  Dataset transformer class for converting input data and labels into a PyTorch dataset.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - x (torch.Tensor): Input data tensor.\n",
+    "    - y (torch.Tensor): Target label tensor.    \n",
+    "  \"\"\"\n",
     "  def __init__(self, x, y):\n",
+    "    \"\"\" Initialize the DatasetTransformer.\n",
+    "\n",
+    "        Parameters:\n",
+    "        - x (torch.Tensor): Input data tensor.\n",
+    "        - y (torch.Tensor): Target label tensor. \"\"\"  \n",
     "    # converting the input into a floating-point number \n",
     "    # x = x.float()\n",
     "    \n",
@@ -140,6 +153,14 @@
     "    \n",
     "  # __getitem__ function returns a sample from the dataset given an index.\n",
     "  def __getitem__(self, index):\n",
+    "    \"\"\" Get a sample from the dataset given an index.\n",
+    "\n",
+    "        Parameters:\n",
+    "        - index (int): Index of the sample to retrieve.\n",
+    "\n",
+    "        Returns:\n",
+    "        - x (torch.Tensor): Input data tensor.\n",
+    "        - y (torch.Tensor): Target label tensor. \"\"\"  \n",
     "    x, y = self.x[index], self.y[index]    \n",
     "    # It is necessary to have both the model, and the data on the same device, \n",
     "    # either CPU or GPU, for the model to process data. \n",
@@ -154,6 +175,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -173,6 +195,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -243,6 +266,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
