--- a/Computer_Vision/41-GramMatrixForNeuralStyleTransfer.ipynb
+++ b/Computer_Vision/41-GramMatrixForNeuralStyleTransfer.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,13 +118,28 @@
     "\n",
     "each element G(i,j) will represent the similarity measure between image i and j.\n",
     "\n",
-    "----------------------------------\n",
+    "----------------------------------\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "```py\n",
     "\n",
     "def gram_matrix(tensor):\n",
-    "  \"\"\" Function to  gram_matrix from image tensor \"\"\"\n",
+    "  \"\"\"\n",
+    "    Calculate the Gram matrix from an image tensor.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - tensor (torch.Tensor): Input image tensor of shape (batch_size, channels, height, width).\n",
+    "\n",
+    "    Returns:\n",
+    "    - gram_matrix (torch.Tensor): Gram matrix of the input tensor.\n",
+    "    \"\"\"\n",
     "\n",
     "   # Unwrap the tensor dimensions into respective variables\n",
     "   # i.e. batch size, distance, height and width\n",
@@ -144,22 +160,7 @@
     "\n",
     "The Gram matrix computed in this technique contains dot products of the feature maps at a layer, which is a correlation operation. The entries basically encode activations that co-occur.\n",
     "\n",
-    "Co-Occurrences means that texture (style) exhibits strong locality. So, when you capture activations that co-occur a lot - you capture this locality.\n",
-    "```py\n",
-    "\n",
-    "#Initializing gram_matrix function for our tensor image\n",
-    "def gram_matrix(tensor):\n",
-    "   # Unwrapping the tensor dimensions into respective variables i.e. batch size, distance, height and width\n",
-    "  _,d,h,w=tensor.size()\n",
-    "  #Reshaping data into a two dimensional of array or two dimensional of tensor\n",
-    "  tensor=tensor.view(d,h*w)\n",
-    "  #Multiplying the original tensor with its own transpose using torch.mm\n",
-    "  #tensor.t() will return the transpose of original tensor\n",
-    "  gram=torch.mm(tensor,tensor.t())\n",
-    "  #Returning gram matrix\n",
-    "  return gram\n",
-    "\n",
-    "```"
+    "Co-Occurrences means that texture (style) exhibits strong locality. So, when you capture activations that co-occur a lot - you capture this locality."
    ]
   }
  ],
