--- a/Computer_Vision/Why_We_Scale_images_for_Neural_Network/Why_We_Scale_images_for_Neural_Network.ipynb
+++ b/Computer_Vision/Why_We_Scale_images_for_Neural_Network/Why_We_Scale_images_for_Neural_Network.ipynb
@@ -170,6 +170,10 @@
     "    \n",
     "  # __len__ function which returns the size of the dataset, \n",
     "  def __len__(self):\n",
+    "    \"\"\"  Get the size of the dataset.\n",
+    "\n",
+    "        Returns:\n",
+    "        - length (int): Size of the dataset. \"\"\"\n",
     "    return len(self.x)\n",
     "  "
    ]
