--- a/Computer_Vision/43_LeNet5_Colab_From_Scratch_PyTorch.ipynb
+++ b/Computer_Vision/43_LeNet5_Colab_From_Scratch_PyTorch.ipynb
@@ -1,6 +1,7 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -18,6 +19,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -142,6 +144,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -202,6 +205,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -239,6 +243,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "XHOaF28qw87C"
@@ -257,6 +262,18 @@
       "outputs": [],
       "source": [
         "class LeNet5(nn.Module):\n",
+        "    \"\"\"\n",
+        "    LeNet-5 model for image classification.\n",
+        "\n",
+        "    Parameters:\n",
+        "    - num_classes (int): Number of output classes.\n",
+        "\n",
+        "    Forward Args:\n",
+        "    - x (torch.Tensor): Input tensor of shape (batch_size, channels, height, width).\n",
+        "\n",
+        "    Forward Returns:\n",
+        "    - output (torch.Tensor): Output tensor of shape (batch_size, num_classes).\n",
+        "    \"\"\"\n",
         "    def __init__(self,num_classes):\n",
         "        super(LeNet5,self).__init__()\n",
         "        self.layer1 = nn.Sequential(\n",
@@ -279,6 +296,15 @@
         "        self.fc2 = nn.Linear(84, num_classes) # Final Layer\n",
         "        \n",
         "    def forward(self, x):\n",
+        "        \"\"\"\n",
+        "        Forward pass of the LeNet-5 model.\n",
+        "\n",
+        "        Parameters:\n",
+        "        - x (torch.Tensor): Input tensor of shape (batch_size, channels, height, width).\n",
+        "\n",
+        "        Returns:\n",
+        "        - output (torch.Tensor): Output tensor of shape (batch_size, num_classes).\n",
+        "        \"\"\"\n",
         "        output = self.layer1(x)\n",
         "        output = self.layer2(output)\n",
         "        # print('output after layer2', output.size()) # torch.Size([32, 16, 5, 5]\n",
@@ -334,6 +360,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "PJSNQLNAw87G"
@@ -390,6 +417,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "ZbZJsUIvw87H"
